<resources>
    <string name="app_name">Dawaya</string>
    <string name="first_name">First name</string>
    <string name="first_name_hint">Enter your first name</string>
    <string name="last_name">Last name</string>
    <string name="last_name_hint">Enter your last name</string>

    <string name="email">Email</string>
    <string name="email_hint">Enter your email</string>

    <string name="password">Password</string>
    <string name="password_hint">Enter your password</string>

    <string name="confirm_password">Confirm password</string>
    <string name="confirm_password_hint">Confirm password</string>

    <string name="phone_number">Phone number</string>
    <string name="phone_number_hint">Enter your phone number</string>

    <string name="date_of_birth">Date of birth</string>
    <string name="date_of_birth_hint">Enter your date of birth</string>

    <string name="gender">Gender</string>
    <string name="gender_hint">Choose your gender</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>

    <string name="log_out">Log out</string>
    <string name="my_orders">My Orders</string>
    <string name="my_addresses">My Addresses</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_icon">menuIcon</string>
    <string name="cart_icon">cartIcon</string>
    <string name="list_item_icon_description">List item icon</string>

    <string name="address_book">Address Book</string>
    <string name="notifications">Notifications</string>
    <string name="open_nav_drawer">Open navigation drawer</string>
    <string name="close_nav_drawer">Close navigation drawer</string>
    <string name="search_hint">What are you looking for?</string>
    <string name="search">Search</string>
    <string name="men_care">Men Care</string>
    <string name="medications">Medications</string>
    <string name="women_care">Women Care</string>
    <string name="baby_care">Baby Care</string>
    <string name="oral_care">Oral Care</string>
    <string name="hair_care">Hair Care</string>
    <string name="home">Home</string>
    <string name="reminders">Reminders</string>
    <string name="county">County </string>
    <string name="apartment_number">Apartment number </string>
    <string name="floor_number">Floor number </string>
    <string name="building_number">Building number </string>
    <string name="street">Street </string>
    <string name="add">add</string>
    <string name="add_address">Add Address</string>
    <string name="order_image">Order Image</string>
    <string name="Category_Image">category_image</string>
    <string name="splash_screen_image">splash_screen_image</string>
    <string name="product">Product</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="user_icon">user icon</string>
    <string name="profile">My Profile</string>
    <string name="back_from_profile_image">back from profile image</string>

    <string name="profile_settings">Profile Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="change_language">Change Language</string>
    <string name="other_settings">Other Settings</string>

    <string name="dark_theme">Dark Theme</string>
    <string name="save">Save</string>
    <string name="available">Available</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="reorder">Reorder</string>
    <string name="feedback">Feedback</string>
    <string name="my_cart">My Cart</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="drug_name">Drug Name</string>
    <string name="any_notes">Any notes</string>
    <string name="quantity_per_intake">Quantity per intake</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="proceed">Proceed</string>
    <string name="ship_to">Ship to</string>
    <string name="shipping">Shipping</string>

    <string name="choose_address">Choose address</string>
    <string name="products">Products</string>
    <string name="place_order">Place Order</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="edit_address">Edit Address</string>
    <string name="delete_this_address">Delete this address?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="phone_numbers">Phone Numbers</string>
    <string name="my_phone_numbers">My Phone Numbers</string>
    <string name="rate">Rate</string>
    <string name="rate_that_order">Rate That Order</string>
    <string name="prescription">Prescription</string>
    <string name="total_price">Total price:</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change">Change</string>
    <string name="settings">Settings</string>
    <string name="testing">Testing</string>
    <string name="test">Test</string>
    <string name="channel_description">Channel</string>
    <string name="pharmabot">PharmaBot</string>
    <string name="online">Online</string>
    <string name="edit_phone_numbers">Edit Phone Numbers</string>
    <string name="add_phone_number">Add Phone Number</string>
    <string name="e_prescription">E-Prescription</string>
    <string name="add_prescription">Add Prescription</string>
    <string name="get_it_now">Get it Now!</string>
    <string name="tell_us_your_feedback">Tell us your feedback</string>
    <string name="feedback_hint">Ex: You have great service, Thank you</string>


    <string-array name="main_menu_items_array">
        <item>My Orders</item>
        <item>Address Book</item>
        <item>Settings</item>
    </string-array>

</resources>