<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:title="@string/my_orders"
            android:id="@+id/my_orders_menu_item"
            android:icon="@drawable/baseline_receipt_long_24"/>

        <item
            android:title="Wishlist"
            android:id="@+id/wishlist_menu_item"
            android:icon="@drawable/outline_favorite_black_24"/>

        <item
            android:title="@string/address_book"
            android:id="@+id/address_book_menu_item"
            android:icon="@drawable/baseline_place_24"/>

        <item
            android:title="@string/phone_numbers"
            android:id="@+id/phone_numbers_menu_item"
            android:icon="@drawable/outline_call_24"/>

        <item
            android:title="@string/settings"
            android:id="@+id/settings_menu_item"
            android:icon="@drawable/baseline_settings_24"/>

        <item
            android:title="@string/testing"
            android:id="@+id/test_menu_item"
            android:icon="@drawable/outline_bug_report_24"/>


    </group>


        <!--<item
            android:title="@string/settings">

            <menu>
                <group android:checkableBehavior="single">

                <item
                    android:title="@string/notifications"
                    android:id="@+id/notifications_item"
                    android:icon="@drawable/baseline_toggle_on_24"/>
                </group>
            </menu>
        </item>-->




    <group >
        <item android:title="@string/log_out"
            android:id="@+id/log_out_button"
            android:icon="@drawable/baseline_logout_24"

            />

    </group>

</menu>