<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!-- Medications -->

    <TextView
        android:id="@+id/medications"
        android:text="@string/medications"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:drawableTopCompat="@drawable/man"

        android:gravity="center"

        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"

       app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/men_care"
        app:layout_constraintBottom_toTopOf="@+id/women_care"/>

    <!-- Men Care-->
    <TextView
        android:id="@+id/men_care"
        android:text="@string/men_care"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:drawableTopCompat="@drawable/man"

        android:gravity="center"

        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/medications"
        app:layout_constraintBottom_toTopOf="@+id/baby_care"/>

    <!-- ###### -->


    <!--Women Care -->
    <TextView
        android:id="@+id/women_care"
        android:text="@string/women_care"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:drawableTopCompat="@drawable/man"

        android:gravity="center"

        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/medications"
        app:layout_constraintRight_toLeftOf="@id/baby_care"
        app:layout_constraintBottom_toTopOf="@id/oral_care"/>

    <!-- Baby Care -->
    <TextView
        android:id="@+id/baby_care"
        android:text="@string/baby_care"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:drawableTopCompat="@drawable/man"

        android:gravity="center"

        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/women_care"
        app:layout_constraintTop_toBottomOf="@id/men_care"
        app:layout_constraintBottom_toTopOf="@id/hair_care"/>


    <!-- ###### -->


    <!--Oral Care -->
    <TextView
        android:id="@+id/oral_care"
        android:text="@string/oral_care"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:drawableTopCompat="@drawable/man"

        android:gravity="center"

        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/hair_care"
        app:layout_constraintTop_toBottomOf="@id/women_care"
        />

    <!--Hair Care -->
    <TextView
        android:id="@+id/hair_care"
        android:text="@string/hair_care"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:drawableTopCompat="@drawable/man"

        android:gravity="center"

        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/oral_care"
        app:layout_constraintTop_toBottomOf="@id/baby_care"/>


</androidx.constraintlayout.widget.ConstraintLayout>