<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/tell_us_your_feedback"
        android:textSize="@dimen/_20sdp"

        android:layout_gravity="center"
        android:layout_margin="@dimen/_15sdp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/feedback_message_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"


        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"


        >
        <!-- Email Field  -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/feedback_message_field"


            android:hint="@string/feedback_hint"
            android:textSize="@dimen/_15sdp"

            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:maxLines="4"
            android:gravity="top"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/_10sdp">

        <TextView
            android:id="@+id/message_feedback_cancel"

            android:text="@string/cancel"
            android:textSize="@dimen/_16sdp"
            android:fontFamily="sans-serif-medium"

            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/message_feedback_ok"

            android:text="@string/ok"
            android:textSize="@dimen/_16sdp"
            android:fontFamily="sans-serif-medium"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"

            />


    </LinearLayout>


</LinearLayout>
