<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <!--  tools:context=".ui.AlarmActivity" -->
    <EditText

        android:id="@+id/drug_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/drug_name"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/drug_note"
        />

    <EditText

        android:id="@+id/drug_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/any_notes"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drug_name"

        />

    <!-- Quantity per intake -->
    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/drug_note"

        >

        <TextView
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/quantity_per_intake"
            android:textSize="@dimen/_20sdp"

            android:gravity="center_vertical"/>

        <EditText
            android:layout_weight="2"
            android:id="@+id/quantity_per_intake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>