<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_margin="@dimen/_10sdp"

    tools:context=".ui.SettingsActivity">

    <ImageView
        android:id="@+id/back_from_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/baseline_arrow_back_ios_24"


        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:contentDescription="@string/back_from_profile_image" />

    <TextView
        android:id="@+id/settings_activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/settings"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        android:textSize="20sp"

        />


    <!--<ScrollView
        android:id="@+id/settings_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_below="@id/settings_activity_title"
        >-->
<FrameLayout
    android:id="@+id/settings_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <!--So that the scroll view has only one child-->
<RelativeLayout
    android:id="@+id/dummy_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <TextView
        android:id="@+id/profile_settings_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/profile_settings"
        android:textSize="@dimen/_18sdp"

        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"

        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        />

    <LinearLayout
        android:id="@+id/profile_setting_options"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@id/profile_settings_label"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        >


        <!--Edit Profile-->
        <RelativeLayout
            android:id="@+id/edit_profile_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_14sdp">

            <TextView
                android:id="@+id/edit_profile_text_view"
                android:text="@string/edit_profile"
                android:textSize="@dimen/_16sdp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"

                app:drawableStartCompat="@drawable/outline_person_24"
                android:drawablePadding="@dimen/_5sdp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"

                android:src="@drawable/outline_arrow_forward_ios_black_18"/>

        </RelativeLayout>

        <!--Change Password -->
        <RelativeLayout
            android:id="@+id/change_password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_14sdp"
            >

            <TextView
                android:id="@+id/change_password_text_view"
                android:text="@string/change_password"
                android:textSize="@dimen/_16sdp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"

                app:drawableStartCompat="@drawable/outline_lock_24"
                android:drawablePadding="@dimen/_5sdp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"

                android:src="@drawable/outline_arrow_forward_ios_black_18"
                />

        </RelativeLayout>

        <!--Change Language -->
        <RelativeLayout
            android:id="@+id/change_language_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_14sdp"
            >

            <TextView
                android:id="@+id/change_language_text_view"
                android:text="@string/change_language"
                android:textSize="@dimen/_16sdp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"

                app:drawableStartCompat="@drawable/outline_translate_24"
                android:drawablePadding="@dimen/_5sdp"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"

                android:src="@drawable/outline_arrow_forward_ios_black_18"/>

        </RelativeLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/other_settings_label"

        android:text="@string/other_settings"
        android:textSize="@dimen/_18sdp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/profile_setting_options"
        android:layout_marginBottom="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp"

        />

    <LinearLayout
        android:id="@+id/other_setting_options"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@id/other_settings_label"
        >


        <!--Theme-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp">

            <TextView
                android:id="@+id/theme_text_view"
                android:text="@string/dark_theme"
                android:textSize="@dimen/_16sdp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"

                app:drawableStartCompat="@drawable/outline_dark_mode_black_24"
                android:drawablePadding="@dimen/_5sdp"/>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/dark_mode_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"

                android:src="@drawable/outline_arrow_forward_ios_black_18"/>

        </RelativeLayout>

        <!--Notifications-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp">

            <TextView
                android:id="@+id/notifications_text_view"
                android:text="@string/notifications"
                android:textSize="@dimen/_16sdp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"

                app:drawableStartCompat="@drawable/outline_notifications_24"
                android:drawablePadding="@dimen/_5sdp"/>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/notification_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"

                android:src="@drawable/outline_arrow_forward_ios_black_18"/>

        </RelativeLayout>





    </LinearLayout>

</RelativeLayout>
</FrameLayout>
    <!--</ScrollView>-->


</RelativeLayout>
